# nonebot-plugin-learn

./: .editorconfig  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
nonebot_plugin_learn/: __init__.py  bbcode.py  state.py
nonebot_plugin_learn/tutorial/: __init__.py
nonebot_plugin_learn/tutorial/chapter0/: __init__.py  tutorial.md
nonebot_plugin_learn/tutorial/chapter1/: __init__.py  tutorial1.py  tutorial2.py
